--- a/project_level_code_completion/pyproject.toml
+++ b/project_level_code_completion/pyproject.toml
@@ -57,6 +57,7 @@ optimum = "^1.14.1"
 jsonlines = "^4.0.0"
 transformers = "^4.39.3"
 datasets = "^2.19.2"
+rank-bm25 = "^0.2.2"
 
 
 [build-system]
