--- a/module_summarization/configs/config_eval.yaml
+++ b/module_summarization/configs/config_eval.yaml
@@ -1,5 +1,6 @@
-hf_api_key: "YOUR_KEY_HERE"
+hf_api_key: "YOUR HUGGINGFACE TOKEN"
 hf_tokenizer_checkpoint: "meta-llama/Llama-2-7b-chat-hf"
-model_name: "mistralai/Mistral-7B-Instruct-v0.2"
+model_name: "gpt-4o-mini"
 max_context_toks: 6000
 device: "cuda:0"
+use_bert: True
